apps/rhf-mui-docs/src/app/v4/components/mui/RHFTagsInput/page.mdx
import { DocsPage, PropsTable, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFTagsInput;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFTagsInput

**RHFTagsInput** is a customized version of [TextField](https://v7.mui.com/material-ui/react-text-field/)
designed for entering and managing keyword-based inputs.
Each keyword is visually represented as a [Chip](https://v7.mui.com/material-ui/react-chip/),
offering a cleaner, more interactive experience than comma-separated values
in a standard text field.

### Working

`RHFTagsInput` works as follows:

- Users can type a keyword, press **Enter** or the **delimiter key** (default `","`), and see it rendered
as a chip, with the input field cleared for the next entry.
- Pasting comma-separated values automatically generates
chips for each value. The delimiter can also be configured, for example `"|"`.
- Users can remove a chip by clicking its "x" button.
- Pressing the **Backspace** or **Delete** key when the input is
empty removes the last chip.
- When the field is unfocused, only the first two chips are displayed
by default. This can be customized via the `limitTags` prop, with `-1`
showing all chips.

## Usage

```tsx
import RHFTagsInput, { RHFTagsInputProps } from '@nish1896/rhf-mui-components/mui/tags-input';
```

```tsx
<RHFTagsInput
  fieldName="tags"
  control={control}
/>
```

### Tag Events

Use `onTagAdd`, `onTagDelete`, and `onTagPaste` to validate, transform, or prevent
tag changes before the form value is updated. Each callback receives a single object
argument with the current field value available as `currentValue`.

```tsx
<RHFTagsInput
  fieldName="tags"
  control={control}
  onTagAdd={({ newTag, currentValue }) => {
    if (newTag.length < 3 || currentValue.includes(newTag)) {
      return false;
    }
  }}
  onTagDelete={({ deletedTag }) => {
    if (deletedTag.includes('sh')) {
      return false;
    }
  }}
  onTagPaste={({ pastedTags }) => (
    pastedTags.filter(tag => tag.length >= 3)
  )}
/>
```

## Examples
- [TextField](https://v7.mui.com/material-ui/react-text-field/)
- [Chip](https://v7.mui.com/material-ui/react-chip/)

## API

The `RHFTagsInputProps` interface extends [TextFieldProps](https://v7.mui.com/material-ui/api/text-field/)
and includes the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFTagsInput}
  docsVersion={4}
  muiVersion={7}
  v4AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/tags-input"
  docsVersion={4}
/>
